force-app/main/default/objects/SurveyResponse__c.object
<CustomObject>
    <description>Captures each survey response instance</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyTemplate__c</fullName>
        <label>Survey Template</label>
        <referenceTo>SurveyTemplate__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <description>NPS score from 0 to 10</description>
        <inlineHelpText>Net Promoter Score: 0-10</inlineHelpText>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Score__c</fullName>
        <description>Customer Satisfaction score from 1 to 5</description>
        <inlineHelpText>CSAT score: 1-5</inlineHelpText>
        <label>CSAT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>When the response was submitted</description>
        <label>Response Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Answers__c</fullName>
        <description>JSON blob of all answers</description>
        <inlineHelpText>JSON blob containing all question answers</inlineHelpText>
        <label>Answers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of the response</description>
        <inlineHelpText>Sent, Completed, Bounced, Opened</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                    <default>true</default>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Optional link to the triggering case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <label>Survey Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>